[metadata]
name = libmatching
version = 0.0.2
aruthor= Fernando Muro
author_email = fmuro@us.es
description = library to match strings from two lists
license = GPL-3.0

[options]
packages = libmatching
install_requires =
    thefuzz
    python-Levenshtein
    numpy
    scipy
    tabulate
    unidecode
